IMPROVE: add configurable classes to ad outer div

--- a/javascripts/discourse/templates/components/house-ad.hbs
+++ b/javascripts/discourse/templates/components/house-ad.hbs
@@ -1,4 +1,4 @@
 {{#if showAd}}
-  <div id="{{thisDesktopId}}"></div>
-  <div id="{{thisMobileId}}"></div>
+  <div id="{{thisDesktopId}}" class="{{theme-i18n 'house_ads_livewrapped_desktop_classes'}}"></div>
+  <div id="{{thisMobileId}}" class="{{theme-i18n 'house_ads_livewrapped_mobile_classes'}}"></div>
 {{/if}}
