FIX: final ad when there are deleted posts

--- a/javascripts/discourse/templates/components/ad-slot.hbs
+++ b/javascripts/discourse/templates/components/ad-slot.hbs
@@ -5,7 +5,7 @@
     category=category
     listLoading=listLoading
     postNumber=postNumber
-    posts_count=posts_count
+    highest_post_number=highest_post_number
     indexNumber=indexNumber
     tagName=childTagName
   }}
