--- a/javascripts/discourse/templates/components/post-bottom-ad.hbs
+++ b/javascripts/discourse/templates/components/post-bottom-ad.hbs
@@ -1,1 +1,1 @@
-{{ad-slot placement="post-bottom" posts_count=model.topic.posts_count category=model.topic.category.slug postNumber=model.post_number}}
+{{ad-slot placement="post-bottom" highest_post_number=model.topic.highest_post_number category=model.topic.category.slug postNumber=model.post_number}}
