--- a/javascripts/discourse/templates/components/house-ad.hbs
+++ b/javascripts/discourse/templates/components/house-ad.hbs
@@ -1,4 +1,4 @@
 {{#if showAd}}
-  <div id="{{thisDesktopId}}" class="{{theme-i18n 'house_ads_livewrapped_desktop_classes'}}"></div>
-  <div id="{{thisMobileId}}" class="{{theme-i18n 'house_ads_livewrapped_mobile_classes'}}"></div>
+  <LivewrappedAd @tagIdBaseString={{this.tagIdBaseStringDesktop}} @adIndex={{this.adIndex}} @thisId={{thisDesktopId}} @adClass={{theme-i18n 'house_ads_livewrapped_desktop_classes'}}/>
+  <LivewrappedAd @tagIdBaseString={{this.tagIdBaseStringMobile}} @adIndex={{this.adIndex}} @thisId={{thisMobileId}} @adClass={{theme-i18n 'house_ads_livewrapped_mobile_classes'}}/>
 {{/if}}
