FIX: prevent scroll jumping by defeating ads on topic revisit

--- a/javascripts/discourse/templates/components/ad-slot.hbs
+++ b/javascripts/discourse/templates/components/ad-slot.hbs
@@ -8,6 +8,7 @@
       listLoading=listLoading
       postNumber=postNumber
       highest_post_number=highest_post_number
+      current_post_number=current_post_number
       indexNumber=indexNumber
       tagName=childTagName
     }}
