--- a/javascripts/discourse/templates/components/post-bottom-ad.hbs
+++ b/javascripts/discourse/templates/components/post-bottom-ad.hbs
@@ -1,6 +1,7 @@
 {{ad-slot
   placement="post-bottom"
   highest_post_number=@model.topicPostsCount
+  current_post_number=@model.topic.current_post_number
   category=@model.topic.category.slug
   postNumber=@model.post_number
 }}
